# folder_sync

./: .gitignore  CHANGELOG.md  README.md  config.json.sample  pyproject.toml  requirements.txt  run.py
src/folder_sync/: __main__.py  my_tools.py  uploaded_file.py
src/folder_sync/mega/: mega.py
src/folder_sync/mega_/: mega.py
