[tool.poetry]
name = "folder-sync"
version = "1.0.0"
description = "This tool allow to compare local files and folders with Mega.io / Mega.nz / Mega.co.nz files and folder."
authors = ["PhunkyBob <phunkybob@noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
tenacity = "^8.2.3"
pycryptodome = "^3.19.0"
tqdm = "^4.66.1"
pandas = "^2.2.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
